--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongoDbUrl = mongodb+srv://karimhanafy01:3GxD2JBgC96BlUQH@testingcluster.i7j0upi.mongodb.net/?retryWrites=true&w=majority&appName=TestingCluster
+mongoDbUrl = mongodb+srv://ankitvis609:Sonu135790@cluster0.esi3ulq.mongodb.net/todolistDb
